Refactored List methods to use Streams.